--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
+  "name": "db2_api",
+  "version": "1.0.0",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
     "apollo-server": "^3.13.0",
     "bcryptjs": "^3.0.2",
     "dotenv": "^16.5.0",
     "graphql": "^16.11.0",
     "jsonwebtoken": "^9.0.2",
-    "knew": "^0.0.0",
     "knex": "^3.1.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.14.1"
